create new view and controller to add new employee

--- a/asp-net-crud/appsettings.json
+++ b/asp-net-crud/appsettings.json
@@ -5,5 +5,8 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "MvcDemoConnectionString": "server=Desktop-7F7HF;database=db-crudApp;Trusted_connection=true;TrustServerCertificate=True;"
+  }
 }
